# euroqa

./: .env.example  .gitignore  Dockerfile  EuroQA_后端接口文档.xlsx  docker-compose.yml  pyproject.toml  术语库1.0-20260326.xlsx
.helloagents/: CHANGELOG.md  CHANGELOG.sync-conflict-20260327-165358-MZV26SU.md  INDEX.md  context.md
.helloagents/archive/: _index.md
.helloagents/modules/: _index.md  data.glossary.md  frontend.components.EvidencePanel.md  frontend.components.MainWorkspace.md  frontend.components.Sidebar.md  frontend.components.TopBar.md  frontend.hooks.useEuroQaDemo.md  frontend.lib.pdfViewerPage.md  frontend.lib.session.md  server.api.v1.documents.md  server.api.v1.glossary.md  server.api.v1.query.md  server.api.v1.settings.md  server.api.v1.sources.md  server.core.generation.md  server.core.retrieval.md
.trellis/: .template-hashes.json  .version  workflow.md
data/: glossary-maintenance.json  glossary.json
docs/: architecture-flow.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
pipeline/: chunk.py  config.py  content_list.py  contextualize.py  contextualizer.py  index.py  parse.py  run.py  structure.py  summarize.py
prototype/: README.md
scripts/: rebuild-indexes.sh  start-backend.sh  start-frontend.sh  start-search-stack.sh
server/: config.py  deps.py  main.py
shared/: __init__.py  elasticsearch_client.py  model_clients.py  pipeline_debug.py  reference_graph.py
tests/: conftest.py  test_config.py  test_e2e.py  test_elasticsearch_client.py  test_model_clients.py  test_pipeline_debug.py
(+203 files in other folders)
