[project]
name = "euro-qa"
version = "0.1.0"
description = "Eurocode standards Q&A system for Chinese engineers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "openai>=1.50",
    "httpx>=0.27",
    "FlagEmbedding>=1.2",
    "transformers>=4.40,<4.46",
    "pymilvus>=2.4",
    "elasticsearch[async]>=8.0",
    "pymupdf>=1.24",
    "tiktoken>=0.7",
    "cachetools>=5.3",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
euro-pipeline = "pipeline.run:main"
